@@ -1,5 +1,11 @@
 2005-09-05  Ross Burton  <ross@burtonini.com>
 
+	* Makefile.am:
+	* doap.rdf.in:
+	Generate a DOAP file at dist-time and ship it.
+
+2005-09-05  Ross Burton  <ross@burtonini.com>
+
 	* configure.in:
 	* NEWS:
 	Version 2.12!
